# ChatRoom

./: CMakeLists.txt  README.md  build.sh  todo.md
docs/markdown/: cfunc.md  cmake.md  epoll.md  pthread.md  shell.md  todo.md
src/: CMakeLists.txt  connect.c  event_epoll.c  event_epoll.h  main.c  rbtree.c  rbtree.h  thread_pool.c  timer.h
src/chatting_room/: CMakeLists.txt
src/chatting_room/client/: client.c  screen.c
src/chatting_room/server/: index.html  server.c
src/client/: client.c  screen.h
src/compress/: CMakeLists.txt  compress.c  zlib_wrapper.c  zlib_wrapper.h
src/core/: CMakeLists.txt  event.c  event.h  http.c  http.h  http_pub.h  http_request.c  http_request.h  list.c  list.h  log.c  log.h  message.c  message.h  net.c  net.h  pub_def.h  rbtree.c  rbtree.h  sds.c  sds.h  t_list.c  t_list.h  thread_pool.c  thread_pool.h  url.c  url.h
src/core/base/: big_int.c  big_int.h  bit_op.c  bit_op.h  dict.c  dict.h  hash.c  hash.h  rbtree.h  ringbuff.c  ringbuff.h  sds.c  sds.h  stream.c  stream.h  t_list.h
src/core/compress/: compress.c  compress.h  huffman.c  huffman.h  lz_backward.c  lz_backward.h  lz_backward_ref.c  lz_backward_ref.h  toylz.c  toylz.h
src/core/coroutine/: coroutine.c  coroutine.h
src/core/test_frame/: unittest.c  unittest.h  unittest_assertion.c  unittest_assertion.h  unittest_inner.h  unittest_print.c  unittest_print.h
src/core/test_frame/include/: unittest.h
src/demo/: CMakeLists.txt
src/demo/pthread/: pthread.md  pthread_test.c
src/include/: pub.h
src/mng/: CMakeLists.txt
src/mng/main/: connect.c  connect.h  event_epoll.c  event_epoll.h  log.c  log.h  main.c  rbtree.c  rbtree.h  thread_pool.h  timer.c
src/mng/pthread/: pthread_test.c  thread_pool.c  thread_pool.h
src/server/: CMakeLists.txt  server.c
src/server/pthread/: pthread_test.c
src/test/: CMakeLists.txt  test.c
src/toy_client/: CMakeLists.txt  toy_client.c
src/toy_client_python/: toy_client.py
src/web/conf/: nginx.conf
test/: CMakeLists.txt  list_test.c  rbtree_test.c  unittest.c  unittest.h
test/framework/: unittest.c  unittest.h
test/src/core/: CMakeLists.txt  compress_test.c  dict_test.c  list_test.c  rbtree_test.c
test/src/core/base/: CMakeLists.txt  big_int_test.c  dict_test.c  ringbuff_test.c
test/src/core/compress/: CMakeLists.txt  compress_test.c  huffman_dataset.c  huffman_test.c  toylz_test.c
test/test_data/: common_data.c  test_compress_string.c
